# 2d-graphics-test-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: FindWayland.cmake
include/: Engine.h  FrameBuffer.h  Renderer.h
include/command_processing/: Command.h  CommandProcessor.h  CommandStream.h
include/primitives/: Point.h  Primitive.h  Vertex.h
include/rasterizer/: Fragment.h  Rasterizer.h
include/transformations/: TransformationManager.h  ViewportTransformation.h
include/utils/: Color.h  Exceptions.h  Matrix.h  SignalHandler.h  Vector.h  Visitor.h
include/window/: ApplicationWindow.h  MouseEvent.h
src/: ApplicationWindow.cpp  Engine.cpp  FrameBuffer.cpp  Matrix.cpp  Primitive.cpp  Rasterizer.cpp  Renderer.cpp  TransformationManager.cpp  Vector.cpp
test/: MatrixTest.cpp  RasterizerTest.cpp  TransformationManagerTest.cpp
